--- a/churn_analysis_pipeline.ipynb
+++ b/churn_analysis_pipeline.ipynb
@@ -3090,7 +3090,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 585
         },
         "id": "toy5ELJVVdXa",
         "outputId": "d2762052-830c-4964-c081-c2352e2ce392"
@@ -4432,7 +4432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4477,7 +4477,139 @@
             "roc_auc: 0.9097 (CatBoost) \n",
             "Hyperparameter Optimization....\n",
             "########## KNN ##########\n",
-            "roc_auc (Before): 0.8574\n"
+            "roc_auc (Before): 0.8574\n",
+            "roc_auc (After): 0.8944\n",
+            "KNN best params: {'n_neighbors': 39}\n",
+            "\n",
+            "########## RF ##########\n",
+            "roc_auc (Before): 0.8972\n",
+            "roc_auc (After): 0.9093\n",
+            "RF best params: {'max_depth': 15, 'max_features': 'auto', 'min_samples_split': 15, 'n_estimators': 300}\n",
+            "\n",
+            "########## XGBoost ##########\n",
+            "roc_auc (Before): 0.9028\n",
+            "roc_auc (After): 0.9084\n",
+            "XGBoost best params: {'colsample_bytree': 0.5, 'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 200}\n",
+            "\n",
+            "########## LightGBM ##########\n",
+            "[LightGBM] [Info] Number of positive: 6716, number of negative: 25266\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.013404 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11519\n",
+            "[LightGBM] [Info] Number of data points in the train set: 31982, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.209993 -> initscore=-1.324967\n",
+            "[LightGBM] [Info] Start training from score -1.324967\n",
+            "[LightGBM] [Info] Number of positive: 6717, number of negative: 25266\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.013398 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11498\n",
+            "[LightGBM] [Info] Number of data points in the train set: 31983, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210018 -> initscore=-1.324818\n",
+            "[LightGBM] [Info] Start training from score -1.324818\n",
+            "[LightGBM] [Info] Number of positive: 6717, number of negative: 25266\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.019019 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11483\n",
+            "[LightGBM] [Info] Number of data points in the train set: 31983, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210018 -> initscore=-1.324818\n",
+            "[LightGBM] [Info] Start training from score -1.324818\n",
+            "roc_auc (Before): 0.9089\n",
+            "[LightGBM] [Info] Number of positive: 10075, number of negative: 37899\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.019589 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11685\n",
+            "[LightGBM] [Info] Number of data points in the train set: 47974, number of used features: 70\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210010 -> initscore=-1.324868\n",
+            "[LightGBM] [Info] Start training from score -1.324868\n",
+            "[LightGBM] [Info] Number of positive: 6716, number of negative: 25266\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.013509 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11519\n",
+            "[LightGBM] [Info] Number of data points in the train set: 31982, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.209993 -> initscore=-1.324967\n",
+            "[LightGBM] [Info] Start training from score -1.324967\n",
+            "[LightGBM] [Info] Number of positive: 6717, number of negative: 25266\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.012813 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11498\n",
+            "[LightGBM] [Info] Number of data points in the train set: 31983, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210018 -> initscore=-1.324818\n",
+            "[LightGBM] [Info] Start training from score -1.324818\n",
+            "[LightGBM] [Info] Number of positive: 6717, number of negative: 25266\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.012748 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11483\n",
+            "[LightGBM] [Info] Number of data points in the train set: 31983, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210018 -> initscore=-1.324818\n",
+            "[LightGBM] [Info] Start training from score -1.324818\n",
+            "roc_auc (After): 0.9103\n",
+            "LightGBM best params: {'colsample_bytree': 0.7, 'learning_rate': 0.01, 'n_estimators': 300}\n",
+            "\n",
+            "########## CatBoost ##########\n",
+            "roc_auc (Before): 0.9097\n",
+            "roc_auc (After): 0.9097\n",
+            "CatBoost best params: {'depth': 6, 'iterations': 500, 'learning_rate': 0.01}\n",
+            "\n",
+            "Voting Classifier...\n",
+            "[LightGBM] [Info] Number of positive: 10075, number of negative: 37899\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.019142 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11685\n",
+            "[LightGBM] [Info] Number of data points in the train set: 47974, number of used features: 70\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210010 -> initscore=-1.324868\n",
+            "[LightGBM] [Info] Start training from score -1.324868\n",
+            "[LightGBM] [Info] Number of positive: 8060, number of negative: 30319\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.015446 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11582\n",
+            "[LightGBM] [Info] Number of data points in the train set: 38379, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210011 -> initscore=-1.324861\n",
+            "[LightGBM] [Info] Start training from score -1.324861\n",
+            "[LightGBM] [Info] Number of positive: 8060, number of negative: 30319\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.015332 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11578\n",
+            "[LightGBM] [Info] Number of data points in the train set: 38379, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210011 -> initscore=-1.324861\n",
+            "[LightGBM] [Info] Start training from score -1.324861\n",
+            "[LightGBM] [Info] Number of positive: 8060, number of negative: 30319\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.015197 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11585\n",
+            "[LightGBM] [Info] Number of data points in the train set: 38379, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210011 -> initscore=-1.324861\n",
+            "[LightGBM] [Info] Start training from score -1.324861\n",
+            "[LightGBM] [Info] Number of positive: 8060, number of negative: 30319\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.015364 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11564\n",
+            "[LightGBM] [Info] Number of data points in the train set: 38379, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210011 -> initscore=-1.324861\n",
+            "[LightGBM] [Info] Start training from score -1.324861\n",
+            "[LightGBM] [Info] Number of positive: 8060, number of negative: 30320\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.015254 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
+            "[LightGBM] [Info] Total Bins 11573\n",
+            "[LightGBM] [Info] Number of data points in the train set: 38380, number of used features: 69\n",
+            "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.210005 -> initscore=-1.324894\n",
+            "[LightGBM] [Info] Start training from score -1.324894\n",
+            "Accuracy: 0.8758492991592041\n",
+            "F1Score: 0.6894072914613392\n",
+            "ROC_AUC: 0.9091828388611607\n",
+            "Voting_clf has been created\n"
           ]
         }
       ],
@@ -4485,6 +4617,15 @@
         "if __name__ == \"__main__\":\n",
         "    model = main(X_train, y_train)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hdTZJ-zaBONX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -4495,8 +4636,7 @@
       ],
       "gpuType": "T4",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMLsDjRUEQn7kdAolT6geYO",
+      "authorship_tag": "ABX9TyPyQB2GvkNI1dHLLrttKusc",
       "include_colab_link": true
     },
     "kernelspec": {
